## 0.0.8 ##
+ erlenmeyer blue 
+ technologies erlenmeyer blue 
+ uranium-processing_alien
+ uranium-fuel-cell_alien 8000 GJ
+ uranium-360
## 0.0.7 ##
change term "fiole" by "erlenmeyer"
## 0.0.6 ##
+ five technologies for enhance the speed of robot
+ five technologies for enhance the storage of robot
## 0.0.5 ##
+ fluid weapon 
+ two fluids : frost fluid and defrost fluid
## 0.0.4 ##
+ fiole 3 + techno name fixe + try stat balancing
## 0.0.3 ##
+ minor bug
## 0.0.2 ##
+ technology
## 0.0.1 ##
+ Initial release